// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<styled.div
  bgColor="#fff"
  borderColor="red"
  borderless={false}
  displayValue=""
  isFocused={false}
  onChange={[Function]}
>
  <styled.input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  />
  <styled.p
    isFocused={false}
    labelColor="green"
  />
  <styled.p
    activeLabelColor="#000"
    isFocused={false}
    required={true}
  >
    test activeLabel
  </styled.p>
</styled.div>
`;

exports[`MaskedInput renders correctly 1`] = `
<Input
  activeLabel="test activeLabel"
  activeLabelColor="#000"
  bgColor="#fff"
  borderColor="red"
  borderless={false}
  inputID="test inputID"
  labelColor="green"
  maskInput={[Function]}
  required={true}
/>
`;

exports[`ValidatedInput renders correctly 1`] = `
<Input
  activeLabel="test activeLabel"
  activeLabelColor="#000"
  bgColor="#fff"
  borderColor="red"
  borderless={false}
  errorMessage=""
  inputID="test inputID"
  labelColor="green"
  required={true}
  validateInput={[Function]}
>
  <styled.div
    inputIsEmpty={true}
    valid={null}
  >
    <ValidationIcon
      status="empty"
    />
  </styled.div>
</Input>
`;
